[package]
name = "solutionA"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "builder", "tokio1-native-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"
mime = "0.3.17"
async-trait = "0.1.89"
base64 = "0.22.1"
env_logger = "0.11.10"
log = "0.4.29"
